--- a/task-1.html
+++ b/task-1.html
@@ -12,9 +12,9 @@
 
     <ul id="categories">
       <li class="item">
-        <h2 class="js-title-categories">Animals</h2>
+        <h2>Animals</h2>
 
-        <ul class="list-points-animal">
+        <ul>
           <li>Cat</li>
           <li>Hamster</li>
           <li>Horse</li>
@@ -22,18 +22,18 @@
         </ul>
       </li>
       <li class="item">
-        <h2 class="js-title-categories">Products</h2>
+        <h2>Products</h2>
 
-        <ul class="list-points-products">
+        <ul>
           <li>Bread</li>
           <li>Prasley</li>
           <li>Cheese</li>
         </ul>
       </li>
       <li class="item">
-        <h2 class="js-title-categories">Technologies</h2>
+        <h2>Technologies</h2>
 
-        <ul class="list-points-technologies">
+        <ul>
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
